<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.home.kovatsenko.shopbyusers.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:shadowColor="@android:color/darker_gray"
                android:shadowDx="3"
                android:shadowDy="3"
                android:layout_marginTop="20dp"
                android:shadowRadius="4"
                android:text="@string/login"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/textHintToLogin"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:shadowColor="@android:color/darker_gray"
                android:shadowDx="3"
                android:shadowDy="3"
                android:layout_marginTop="20dp"
                android:shadowRadius="4"
                android:text="@string/password"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/textHintToPassword"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/button"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/buttonEnterText" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
