<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.home.kovatsenko.shopbyusers.ListShopsActivity"
    tools:showIn="@layout/activity_list_shops">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextAddShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/textMagasins" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddMagazin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/textviewListShops"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
